--- a/content/80-illustraions.ipynb
+++ b/content/80-illustraions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,8 @@
     "        \"legend.fontsize\": font_size,\n",
     "        \"axes.titlesize\": font_size,\n",
     "        \"font.family\": \"serif\",  # or 'Times New Roman' to match LaTeX\n",
+    "        \"legend.frameon\": True,  # Add boxed legends\n",
+    "\n",
     "    }\n",
     ")\n",
     "\n",
