--- a/content/80-illustraions.ipynb
+++ b/content/80-illustraions.ipynb
@@ -36,7 +36,6 @@
     "        \"axes.titlesize\": font_size,\n",
     "        \"font.family\": \"serif\",  # or 'Times New Roman' to match LaTeX\n",
     "        \"legend.frameon\": True,  # Add boxed legends\n",
-    "\n",
     "    }\n",
     ")\n",
     "\n",
@@ -251,6 +250,70 @@
     "    bbox_inches=\"tight\",\n",
     "    transparent=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import healpy as hp\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pysm3\n",
+    "\n",
+    "# Set the style for the plots\n",
+    "plt.style.use(\"science\")\n",
+    "font_size = 14\n",
+    "\n",
+    "with plt.rc_context(\n",
+    "    {\n",
+    "        \"font.size\": font_size * 1.6,\n",
+    "        \"axes.labelsize\": font_size * 1.6,\n",
+    "        \"xtick.labelsize\": font_size * 1.6,\n",
+    "        \"ytick.labelsize\": font_size * 1.6,\n",
+    "        \"legend.fontsize\": font_size * 1.6,\n",
+    "        \"axes.titlesize\": font_size * 1.6,\n",
+    "    }\n",
+    "):\n",
+    "    # 1. Initialize the PySM Sky with a dust model\n",
+    "    # The 'd1' model includes a spatially varying MBB spectral index.\n",
+    "    sky = pysm3.Sky(nside=512, preset_strings=[\"d1\", \"s1\"])\n",
+    "    npix = hp.nside2npix(sky.nside)\n",
+    "    # 2. Access the mbb_index of the dust component\n",
+    "    # The components are stored in a list. In this case, the first and only component is our dust model.\n",
+    "    dust_component = sky.components[0]\n",
+    "    mbb_index_map = dust_component.mbb_index\n",
+    "    mbb_temperature = dust_component.mbb_temperature\n",
+    "    sync_component = sky.components[1]\n",
+    "    beta_pl = sync_component.pl_index\n",
+    "    # 3. Plot the mbb_index map using healpy\n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    hp.mollview(\n",
+    "        mbb_index_map,\n",
+    "        title=\"$\\\\beta_d$\",\n",
+    "        cmap=\"inferno\",\n",
+    "        bgcolor=(0,) * 4,\n",
+    "        sub=(1, 3, 1),\n",
+    "    )\n",
+    "    hp.mollview(\n",
+    "        mbb_temperature,\n",
+    "        title=\"$T_d$\",\n",
+    "        cmap=\"inferno\",\n",
+    "        bgcolor=(0,) * 4,\n",
+    "        sub=(1, 3, 2),\n",
+    "    )\n",
+    "    hp.mollview(\n",
+    "        beta_pl,\n",
+    "        title=\"$\\\\beta_s$\",\n",
+    "        cmap=\"inferno\",\n",
+    "        bgcolor=(0,) * 4,\n",
+    "        sub=(1, 3, 3),\n",
+    "    )\n",
+    "\n",
+    "    plt.savefig(f\"{out_folder}/mbb_index_map.pdf\", dpi=600, bbox_inches=\"tight\", transparent=True)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -540,7 +603,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "fg",
    "language": "python",
    "name": "python3"
   },
