--- a/publications/paper/furax_comp_sep.bib
+++ b/publications/paper/furax_comp_sep.bib
@@ -464,3 +464,47 @@
    author={Errard, Josquin and Stompor, Radek},
    year={2019},
    month=feb }
+
+@article{Gorski2005,
+   title={HEALPix: a framework for high-resolution discretization and fast analysis of data distributed on the sphere},
+   author={G{\'o}rski, Krzysztof M and Hivon, Eric and Banday, Anthony J and Wandelt, Benjamin D and Hansen, Frode K and Reinecke, Martin and Bartelmann, Matthias},
+   journal={The Astrophysical Journal},
+   volume={622},
+   number={2},
+   pages={759},
+   year={2005},
+   publisher={IOP Publishing}
+}
+
+@article{Planck2020Legacy,
+   title={Planck 2018 results. I. Overview and the cosmological legacy of Planck},
+   author={Planck Collaboration and Aghanim, N. and Akrami, Y. and Ashdown, M. and Aumont, J. and Baccigalupi, C. and Ballardini, M. and others},
+   journal={Astronomy \& Astrophysics},
+   volume={641},
+   pages={A1},
+   year={2020},
+   publisher={EDP Sciences},
+   eprint={1807.06205},
+   archivePrefix={arXiv},
+   primaryClass={astro-ph.CO},
+   note={Masks available at \url{https://pla.esac.esa.int/pla/}}
+}
+
+@article{Liu1989,
+   title={On the limited memory BFGS method for large scale optimization},
+   author={Liu, Dong C and Nocedal, Jorge},
+   journal={Mathematical programming},
+   volume={45},
+   number={1-3},
+   pages={503--528},
+   year={1989},
+   publisher={Springer}
+}
+
+@misc{JeanZay2020,
+   title={Jean Zay supercomputer},
+   author={{GENCI}},
+   url={http://www.idris.fr/eng/jean-zay/jean-zay-presentation-eng.html},
+   year={2020},
+   note={GENCI-IDRIS, France}
+}
